tests/toy/neg/001461_mutation.toylang
program a = { var a : program int; } .
